--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>Produc Catalog</title>
+    <title>DS Catalog</title>
   </head>
   <body>
     <noscript>Habilite o JavaScript em seu navegador.</noscript>
